# zbGuiTemplate

./: README.md  index.html  index.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
program/: main.pyw
program/source/: __init__.py
program/source/interface/: about.py  main.py  setting.py  widget.py
program/source/program/: __init__.py  program.py  setting.py
script/: compile.spec  config.py  release_build.py  setup.iss  updateRequirements.bat
zbGuiTemplate/: main.pyw
zbGuiTemplate/app/: __init__.py
zbGuiTemplate/app/interface/: about.py  setting.py  widget.py
zbGuiTemplate/app/program/: __init__.py  manager.py  program.py  setting.py
