[project]
name = "zbGuiTemplate"
version = "0.0.0"
description = "zbGUI模板（zbGuiTemplate）是一款使用Python开发，基于PySide6和PySide6-Fluent-Widgets开发的开源桌面应用模板。"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aenum==3.1.17",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "clang==21.1.7",
    "colorthief==0.2.1",
    "darkdetect==0.8.0",
    "idna==3.17",
    "nuitka==4.1.2",
    "numpy==2.4.6",
    "packaging==26.2",
    "pillow==12.2.0",
    "puremagic==2.2.0",
    "pyside6==6.10.3",
    "pyside6-addons==6.10.3",
    "pyside6-essentials==6.10.3",
    "pyside6-fluent-widgets==1.11.2",
    "pysidesix-frameless-window==0.8.1",
    "python-magic==0.4.27",
    "python-magic-bin==0.4.14",
    "pywin32==311",
    "qtpy==2.4.3",
    "requests==2.34.2",
    "scipy==1.17.1",
    "send2trash==2.1.0",
    "shiboken6==6.10.3",
    "toml==0.10.2",
    "urllib3==2.7.0",
    "winshell==0.6",
    "zbtoollib==2.0.8.1",
    "zbwidgetlib==3.6.1",
]
